# agent-

./: .gitattributes  .gitignore  README.md
projects/ai-service/: .env.example  README.md  pyproject.toml
projects/ai-service/app/: main.py
projects/ai-service/scripts/: agent_eval.py  agent_intent_eval.py  agent_rag_eval.py  agent_route_eval.py  agent_ticket_field_eval.py  langgraph_minimal_graph_smoke.py  llm_compatible_smoke_test.py  rag_chunk_tuning_preview.py  rag_ingest_smoke.py  rag_keyword_search_preview.py  rag_milvus_filter_smoke.py  rag_milvus_smoke.py  rag_performance_preview.py  rag_rerank_preview.py  rag_retrieval_eval.py  rag_retrieve_smoke.py  rag_security_preview.py  ticket_agent_llm_field_smoke.py  ticket_agent_llm_intent_smoke.py
projects/ai-service/tests/: conftest.py  fakes.py  rag_fakes.py  test_agent_eval_report.py  test_agent_eval_suite.py  test_agent_field_evaluation.py  test_agent_intent_evaluation.py  test_agent_rag_evaluation.py  test_agent_route_evaluation.py  test_bad_case_analysis.py  test_chat_api.py  test_chat_schema.py  test_config.py  test_cors.py  test_exception_handlers.py  test_fake_llm_client.py  test_fake_order_tool.py  test_health.py  test_java_order_client.py  test_java_ticket_client.py  test_knowledge_base_samples.py  test_langchain_chat_model_service.py  test_langchain_structured_output_service.py  test_langchain_tools.py  test_langgraph_minimal_graph.py  test_llm_client.py  test_llm_service.py  test_logging.py  test_message_builder.py  test_prompt_builder.py  (+41 more)
projects/java-mock-service/: README.md  pyproject.toml
(+339 files in other folders)
