[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx2>=2.5.0",
    "langchain-openai>=1.3.5",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
